hphp/hack/test/enum_class_label/typing/enum_class2.php.exp
File "enum_class2.php", line 25, characters 18-21:
An enum class label is required here, not a class constant projection. (Typing[4397])
File "enum_class2.php", line 26, characters 8-9:
Not enough type information to infer the type of this enum class label. (Typing[4396])
